# LLMOps

./: main.py  pyproject.toml  requirements.txt  test.py
faiss_index/session_20251104_100835_ea6d7103/: index.pkl  ingested_meta.json
faiss_index/session_20251104_103451_86292428/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20251104_103647_647c1b5c/: index.pkl  ingested_meta.json
faiss_index/session_20251105_140714_53959c5f/: index.pkl  ingested_meta.json
faiss_index/session_20251105_141926_ff077bd4/: index.pkl  ingested_meta.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/model/: models.py
multi_doc_chat/prompts/: prompt_library.py
multi_doc_chat/src/document_ingestion/: data_ingestion.py
notebook/: RAG.ipynb  evaluations.ipynb  experiments.ipynb
notebook/faiss_index/session_20251104_110122_969a5378/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_110153_a31c228e/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_110628_a91b5c61/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_110633_f8daf2de/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_110638_f68cb847/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_111542_13b19e82/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_111555_5154f86c/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_111614_860ca288/: index.pkl  ingested_meta.json
notebook/faiss_index/session_20251104_111629_bf258dbd/: index.pkl  ingested_meta.json
(+27 files in other folders)
