[project]
name = "llmops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt==0.9",
    "faiss-cpu>=1.12.0",
    "fastapi==0.115.6",
    "ipykernel==6.30.0",
    "jinja2==3.1.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=1.0.2",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "langchain-openai>=1.0.2",
    "langsmith>=0.4.39",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "rapidocr-onnxruntime>=1.4.4",
    "scikit-learn>=1.7.2",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn==0.32.1",
]
